internal/mpt-crypto-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of mpt_confidential_participant"]
        [::std::mem::size_of::<mpt_confidential_participant>() - 99usize];
    ["Alignment of mpt_confidential_participant"]
        [::std::mem::align_of::<mpt_confidential_participant>() - 1usize];
    ["Offset of field: mpt_confidential_participant::pubkey"]
        [::std::mem::offset_of!(mpt_confidential_participant, pubkey) - 0usize];
    ["Offset of field: mpt_confidential_participant::ciphertext"]
        [::std::mem::offset_of!(mpt_confidential_participant, ciphertext) - 33usize];
};
#[doc = " @brief Parameters required to generate a Pedersen Linkage Proof.\n\n - pedersen_commitment: The 64-byte Pedersen commitment.\n - amount: The actual numeric value being committed.\n - ciphertext: The 66-byte buffer containing the encrypted amount.\n - blinding_factor: The 32-byte secret value used to blind the commitment."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mpt_pedersen_proof_params {
    pub pedersen_commitment: [u8; 33usize],
    pub amount: u64,
    pub ciphertext: [u8; 66usize],
    pub blinding_factor: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of mpt_pedersen_proof_params"]
        [::std::mem::size_of::<mpt_pedersen_proof_params>() - 152usize];
    ["Alignment of mpt_pedersen_proof_params"]
        [::std::mem::align_of::<mpt_pedersen_proof_params>() - 8usize];
    ["Offset of field: mpt_pedersen_proof_params::pedersen_commitment"]
        [::std::mem::offset_of!(mpt_pedersen_proof_params, pedersen_commitment) - 0usize];
    ["Offset of field: mpt_pedersen_proof_params::amount"]
        [::std::mem::offset_of!(mpt_pedersen_proof_params, amount) - 40usize];
    ["Offset of field: mpt_pedersen_proof_params::ciphertext"]
        [::std::mem::offset_of!(mpt_pedersen_proof_params, ciphertext) - 48usize];
    ["Offset of field: mpt_pedersen_proof_params::blinding_factor"]
        [::std::mem::offset_of!(mpt_pedersen_proof_params, blinding_factor) - 114usize];
};
unsafe extern "C" {
    #[doc = " @brief Returns a globally shared secp256k1 context."]
    pub fn mpt_secp256k1_context() -> *mut secp256k1_context;
}
unsafe extern "C" {
    #[doc = " @brief Context Hash for ConfidentialMPTConvert."]
    pub fn mpt_get_convert_context_hash(
        account: account_id,
        iss: mpt_issuance_id,
        sequence: u32,
        out_hash: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Context Hash for ConfidentialMPTConvertBack."]
    pub fn mpt_get_convert_back_context_hash(
        acc: account_id,
        iss: mpt_issuance_id,
        seq: u32,
        ver: u32,
        out_hash: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Context Hash for ConfidentialMPTSend."]
    pub fn mpt_get_send_context_hash(
        acc: account_id,
        iss: mpt_issuance_id,
        seq: u32,
        dest: account_id,
        ver: u32,
        out_hash: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Context Hash for ConfidentialMPTClawback."]
    pub fn mpt_get_clawback_context_hash(
        acc: account_id,
        iss: mpt_issuance_id,
        seq: u32,
        holder: account_id,
        out_hash: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Parses a 66-byte buffer into two internal secp256k1 public keys.\n @param buffer [in] 66-byte buffer containing two points.\n @param out1   [out] First internal public key (C1).\n @param out2   [out] Second internal public key (C2).\n @return true on success, false if parsing fails."]
    pub fn mpt_make_ec_pair(
        buffer: *const u8,
        out1: *mut secp256k1_pubkey,
        out2: *mut secp256k1_pubkey,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " @brief Serializes two internal secp256k1 public keys into a 66-byte buffer.\n @param in1   [in] Internal format of the first point (C1).\n @param in2   [in] Internal format of the second point (C2).\n @param out   [out] 66-byte buffer to write the serialized points.\n @return true if both points were valid and successfully serialized, false otherwise."]
    pub fn mpt_serialize_ec_pair(
        in1: *const secp256k1_pubkey,
        in2: *const secp256k1_pubkey,
        out: *mut u8,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " @brief Generates a new Secp256k1 ElGamal keypair.\n @param out_privkey [out] A 32-byte buffer for private key.\n @param out_pubkey  [out] A 33-byte buffer for public key.\n @return 0 on success, -1 on failure."]
    pub fn mpt_generate_keypair(out_privkey: *mut u8, out_pubkey: *mut u8)
        -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Generates a 32-byte blinding factor.\n @param out_factor [out] A 32-byte buffer to store the blinding factor.\n @return 0 on success, -1 on failure."]
    pub fn mpt_generate_blinding_factor(out_factor: *mut u8) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Encrypts an uint64 amount using an ElGamal public key.\n @param amount           [in]  The integer value to encrypt.\n @param pubkey           [in]  The 33-byte public key.\n @param blinding_factor  [in]  The 32-byte random blinding factor (scalar r).\n @param out_ciphertext   [out] A 66-byte buffer to store the resulting ciphertext (C1, C2).\n @return 0 on success, -1 on failure."]
    pub fn mpt_encrypt_amount(
        amount: u64,
        pubkey: *const u8,
        blinding_factor: *const u8,
        out_ciphertext: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Decrypts an MPT amount from a ciphertext pair.\n @param ciphertext [in]  A 66-byte buffer containing the two points (C1, C2).\n @param privkey    [in]  The 32-byte private key.\n @param out_amount [out] Pointer to store the decrypted uint64_t amount.\n @param range_low  [in]  Lower bound of the search range (inclusive).\n @param range_high [in]  Upper bound of the search range (inclusive).\n                         Must satisfy range_low <= range_high and\n                         range_high != UINT64_MAX.\n @return 0 on success, -1 on failure, -2 if range_low > range_high or\n         range_high == UINT64_MAX.\n @note Performance scales linearly with (range_high - range_low). A range of [0, 1,000,000] takes\n approximately 3 seconds on Apple Silicon. Do not pass arbitrarily large ranges."]
    pub fn mpt_decrypt_amount(
        ciphertext: *const u8,
        privkey: *const u8,
        out_amount: *mut u64,
        range_low: u64,
        range_high: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Generates a Schnorr Proof of Knowledge for a Confidential MPT conversion.\n\n This proof is used in 'ConfidentialMPTConvert' transactions to prove the\n sender possesses the private key associated with the account, binding it\n to the specific transaction via the ctx_hash.\n\n @param pubkey    [in]  33-byte public key of the account.\n @param privkey   [in]  32-byte private key of the account.\n @param ctx_hash  [in]  32-byte hash of the transaction (challenge).\n @param out_proof [out] 64-byte buffer to store the compact Schnorr proof.\n @return 0 on success, -1 on failure."]
    pub fn mpt_get_convert_proof(
        pubkey: *const u8,
        privkey: *const u8,
        ctx_hash: *const u8,
        out_proof: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Computes a Pedersen Commitment point for Confidential MPT.\n @param amount           [in]  The 64-bit unsigned integer value to commit.\n @param blinding_factor  [in]  A 32-byte secret scalar (rho) used to hide the amount.\n @param out_commitment   [out] A 33-byte buffer to store the commitment"]
    pub fn mpt_get_pedersen_commitment(
        amount: u64,
        blinding_factor: *const u8,
        out_commitment: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Generates proof for ConfidentialMPTSend.\n\n Produces a compact AND-composed sigma proof (192 bytes) that simultaneously\n proves ciphertext equality, Pedersen commitment linkage, and balance ownership\n under a single Fiat-Shamir challenge, followed by an aggregated Bulletproof\n range proof (754 bytes). Total proof size is fixed at 946 bytes.\n\n pc_m must be computed as m*G + r*H using tx_blinding_factor as the blinding\n factor (not an independent scalar), since the compact sigma proof binds pc_m\n to the ciphertext randomness r.\n\n @param priv               [in] The sender's 32-byte private key.\n @param pub                [in] The sender's 33-byte public key.\n @param amount             [in] The amount being sent.\n @param participants         [in] List of participants, including Sender, Dest, Issuer,\n Auditor(optional).\n @param n_participants       [in] Number of participants (3 or 4).\n @param tx_blinding_factor [in] The ElGamal randomness r (also blinding factor for pc_m).\n @param context_hash       [in] The 32-byte context hash.\n @param amount_commitment  [in] Pedersen commitment pc_m = m*G + r*H.\n @param balance_params     [in] Includes pedersen_commitment (pc_b), amount (balance),\n                                blinding_factor (rho), and ciphertext (b1||b2).\n @param out_proof          [out] Buffer to receive the proof blob.\n @param out_len            [in/out] In: capacity (must be >= 946). Out: bytes written.\n @return 0 on success, -1 on failure."]
    pub fn mpt_get_confidential_send_proof(
        priv_: *const u8,
        pub_: *const u8,
        amount: u64,
        participants: *const mpt_confidential_participant,
        n_participants: usize,
        tx_blinding_factor: *const u8,
        context_hash: *const u8,
        amount_commitment: *const u8,
        balance_params: *const mpt_pedersen_proof_params,
        out_proof: *mut u8,
        out_len: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Generates proof for ConfidentialMPTConvertBack.\n\n Produces a compact AND-composed sigma proof (128 bytes) over the balance\n witness (b, rho, priv), followed by a single Bulletproof range proof (688\n bytes) over the remainder commitment pc_rem = pc_b - m*G.\n Total proof size: 816 bytes (SECP256K1_COMPACT_CONVERTBACK_PROOF_SIZE +\n kMPT_SINGLE_BULLETPROOF_SIZE).\n\n @param priv         [in] The holder's 32-byte private key.\n @param pub          [in] The holder's 33-byte public key.\n @param context_hash [in] The 32-byte context hash binding the proof to the transaction.\n @param amount       [in] The publicly revealed conversion amount m.\n @param params       [in] Includes pedersen_commitment (pc_b), blinding_factor (rho),\n                          amount (balance b), and ciphertext (b1||b2).\n @param out_proof    [out] 816-byte buffer for the compact sigma proof and range proof.\n @return 0 on success, -1 on failure."]
    pub fn mpt_get_convert_back_proof(
        priv_: *const u8,
        pub_: *const u8,
        context_hash: *const u8,
        amount: u64,
        params: *const mpt_pedersen_proof_params,
        out_proof: *mut u8,
    ) -> ::std::os::raw::c_int;
}
